<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhysicsQuestionOne">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physQuestionOne"
            android:textSize="20dp"
            />
        <RadioGroup
            android:id="@+id/physQuestionOneRadioOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/physQuestionOneCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/physQuestionOneCorrect"
                android:textSize="15dp"
                />
            <RadioButton
                android:id="@+id/physQuestionOneIncorrect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/physQuestionOneIncorrect1"
                android:textSize="15dp"
                />
            <RadioButton
                android:id="@+id/physQuestionOneIncorrect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/physQuestionOneIncorrect2"
                android:textSize="15dp"
                />
            <RadioButton
                android:id="@+id/physQuestionOneIncorrect3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/physQuestionOneIncorrect3"
                android:textSize="15dp"
                />
        </RadioGroup>
        <Button
            android:id="@+id/btnsubmitPhysQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Submit"
            android:textSize="10dp"
            android:enabled="false"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>