<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarvelQuestionOne">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marvQuestionOne"
            android:textSize="20dp"
            />
        <RadioGroup
            android:id="@+id/marvQuestionOneRadioOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/marvQuestionOneCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/marvQuestionOneCorrect"
                android:textSize="15dp"
                />
            <RadioButton
                android:id="@+id/marvQuestionOneIncorrect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/marvQuestionOneIncorrect1"
                android:textSize="15dp"
                />
            <RadioButton
                android:id="@+id/marvQuestionOneIncorrect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/marvQuestionOneIncorrect2"
                android:textSize="15dp"
                />
            <RadioButton
                android:id="@+id/marvQuestionOneIncorrect3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/marvQuestionOneIncorrect3"
                android:textSize="15dp"
                />
        </RadioGroup>
        <Button
            android:id="@+id/btnsubmitMarvQuestionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Submit"
            android:textSize="10dp"
            android:enabled="false"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>